CAmbio de logo crear guifos en proceso

--- a/estilos/sailor-day.css
+++ b/estilos/sailor-day.css
@@ -603,6 +603,9 @@ body {
   width: 102.6px;
   height: 114px; }
 
+.srclogo-dia  {
+  background: url(./assets/gifOF_logo.png)}
+
 .div-botones--barra-navegacion {
   width: 92.9%;
   height: 114px;
