--- a/estilos/sailor-night.css
+++ b/estilos/sailor-night.css
@@ -603,6 +603,10 @@ body {
   width: 102.6px;
   height: 114px; }
 
+.srclogo-noche {
+  background: url(./assets/gifOF_logo_dark.png);
+}
+
 .div-botones--barra-navegacion {
   width: 92.9%;
   height: 114px;
