Creando copia de crear guifo

--- a/Koala/_elementos.scss
+++ b/Koala/_elementos.scss
@@ -191,7 +191,7 @@
 }
 
 .texto-bold {
-    font-weight: 600;
+    font-weight: bold;
 }
 .texto--caja-titulo {// Son todas las cajas blancas titulo de seccion
     font-size: $font-size_mediana;
