--- a/Koala/_variables-day.scss
+++ b/Koala/_variables-day.scss
@@ -1,5 +1,5 @@
 /*colores*/
-$color-backgroud_light: #fef4fd;
+$color-backgroud_light: #cfbfcf;
 $color-pestaña_ligth: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
 $color-boton_ligth: #F7C9F3;
 $color-boton_rosado: #F7C9F3;
@@ -61,7 +61,7 @@ $ancho-caja-contenedora-buscar-resultados: 82.9%;
 $alto-caja_hoy-sugerimos:32px; // 1.9%;
 $alto-caja-gifs-sugeridos: 313px;
 
-$ancho-caja-gifs-resultados:24.4%;// 294px
+$ancho-caja-gifs-resultados:24.33%;// 294px
 $alto-caja-gifs-resultados: 304px;// 18.4%;
 
 $ancho-caja-gifs-interior:96.5%;// 294px
