Feth  sugerimos, tendencias y buscar

--- a/Koala/_elementos.scss
+++ b/Koala/_elementos.scss
@@ -298,6 +298,11 @@
 }
 .cajas-gifs-sugeridos__margin {margin-left: 0.8%;}
 
+.imagen-sugeridos {
+    width: 100%;
+    height: 279.5px;
+}
+
 .caja-gifs-resultados {
     width: $ancho-caja-gifs-resultados; 
     height: $alto-caja-gifs-resultados;
@@ -351,7 +356,7 @@
 }
 
 .cajas-gif-interior__margin {
-    margin: 2px 0px 0px 6px;
+    margin: 2px 0px 0px 4px;
 }
 
 .caja-crear-guifos-inicio {
