Stillo video e imagen de video y guifos

--- a/Koala/_elementos.scss
+++ b/Koala/_elementos.scss
@@ -399,6 +399,18 @@
     margin: 1% 0px 0px 0px;
 }
 
+.video {
+    width: 99.4%;
+    height: 435px;
+    margin: 2.5px 0px 0px 1px;
+}
+
+.imagen-video {
+    width: 99.4%;
+    height: 435px;
+    margin: 2.5px 0px 0px 0.8px;
+}
+
 .caja-contador {
     width: 124px;
     height: 36px;
@@ -466,7 +478,7 @@
     height: 196px;
     background: #FFFFFF;
     border: 1px solid #979797;
-    box-20pxshadow: inset -2px -2px 0 0 #E6E6E6, inset 2px 2px 0 0 #000000;
+    box-shadow: inset -2px -2px 0 0 #E6E6E6, inset 2px 2px 0 0 #000000;
     margin: 7% 0px 0px 5%;
 }
 
