Caja exito en su lugar

--- a/Koala/_bloques.scss
+++ b/Koala/_bloques.scss
@@ -304,6 +304,12 @@ body {
 
     .section-sugerimos {
         margin-top: 64px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .ocultar-section-sugerimos {
+        display: none;
     }
 
         .div-resultado-sugerimos {
