Poner Imagen a caja exito

--- a/Koala/estilo.css
+++ b/Koala/estilo.css
@@ -490,6 +490,11 @@
   width: 50%;
   height: 367px; }
 
+.gif-exito {
+  width: 99%;
+  height: 192px;
+  margin: 2px 0px 0px 2px; }
+
 .caja-contenedor-cambio-tema {
   width: 167px;
   height: 102px;
