--- a/Koala/_elementos.scss
+++ b/Koala/_elementos.scss
@@ -499,6 +499,12 @@
     height: 367px;
 }
 
+.gif-exito {
+    width: 99%;
+    height: 192px;
+    margin: 2px 0px 0px 2px;
+}
+
 .caja-contenedor-cambio-tema {
     width: 167px;
     height: 102px;
