--- a/Koala/estilo.css
+++ b/Koala/estilo.css
@@ -109,7 +109,11 @@
   height: 36px;
   background: #E6E6E6;
   border: 1px solid #808080;
-  box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF; }
+  box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
+  background-image: url(../assets/CombinedShape.svg);
+  background-repeat: no-repeat;
+  background-position: left 5px top 10px;
+  background-origin: content-box; }
 
 /*------------------------Texto botones---------------------*/
 .boton-texto {
@@ -802,7 +806,11 @@ a:active {
   border: 1px solid #808080; }
 
 .boton--buscar:hover {
-  background: #F7C9F3; }
+  background: #F7C9F3;
+  background-image: url(../assets/lupa.svg);
+  background-repeat: no-repeat;
+  background-position: left 5px top 10px;
+  background-origin: content-box; }
 
 .boton--buscar:active {
   background: #CE36DB;
