--- a/Koala/_modificadores.scss
+++ b/Koala/_modificadores.scss
@@ -18,8 +18,6 @@ a:active{
     border: 1px dotted #110038; 
 }
 
-
-
 .boton:hover {
     background: #E6BBE2;
   
@@ -101,6 +99,10 @@ a:active{
 
 .texto-mis-guifos:active {
     color: #dbccdf;
+}
+
+.boton-historial:hover {
+    background: rgb(68, 118, 211);
 }
 
 
